--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
     <title>My Portfolio</title>
-    <link rel="icon" href="assets/searching.png" type="image/x-icon">
+    <link rel="icon" href="assets/logo.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav id="desktop-nav">
             <div class="logo">
-                <img src="assets/logo.jpg" class="logo1" alt="">
+                <img src="assets/logo.ico" class="logo1" alt="">
             </div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -42,12 +42,12 @@
     </header>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="assets/alson.jpg" alt="ALI DABO pic">
+            <img src="assets/black_Al-removebg-preview.png" alt="ALI DABO pic">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Ali Dabo</h1>
-            <p class="section__text__p2">Web Developer</p>
+            <p class="section__text__p2">Software developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('assets/AliDabo_Resume.pdf')" target="_blank">
                     Download Cv
@@ -67,26 +67,25 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="assets/dab.png" alt="Profile Pic" class="about-pic">
+                <img src="assets/Al_Vest-removebg-preview.png" alt="Profile Pic" class="about-pic">
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
                         <img src="assets/experience.png" alt="Experience icon" class="icon">
                         <h3>Experience</h3>
-                        <p>1+ years <br /> Frontend Development</p>
+                        <p>3+ years <br /> Software developer</p>
                     </div>
                     <div class="details-container">
                         <img src="assets/education.png" alt="Experience icon" class="icon">
                         <h3>Education</h3>
-                        <p>B.Sc. Bachelors Degree in IT</p>
+                        <p>Bachelor's Degree in Computer Science  Software Engineering</p>
                     </div>
                 </div>
                 <div class="text-container">
                     <p>
-                        "As a front-end developer, I combine creativity with technical expertise to build captivating user interfaces with HTML, CSS, and JavaScript. With a strong foundation in backend development and database management,
-                        I deliver fully-functional websites that exceed expectations. I'm committed to staying at the forefront of web development and contributing my skills to innovative projects."
-                    </p>
+                        As a Computer Science graduate specializing in Software Engineering, I combine creativity with technical expertise to design and develop robust software systems. With a strong foundation in both frontend technologies like HTML, CSS, and JavaScript, and backend development and database management, I deliver comprehensive solutions that exceed expectations. 
+                         I am dedicated to staying at the cutting edge of software engineering and contributing my skills to innovative projects.</p>
                 </div>
             </div>
         </div>
@@ -190,7 +189,7 @@
             onclick="location.href='./#projects'">
     </section> 
     <section id="projects">
-        <p class="section__text__p1">Browse My Recent</p>
+        <p class="section__text__p1" style="visibility: hidden;">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
             <div class="about-containers">
@@ -198,7 +197,7 @@
                     <div class="article-container">
                         <img src="assets/project-1.png" alt="Project 1" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Library Management System In Java 📚</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/alsondab'" target="_blank">GitHub</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href-='https://github.com'" target="_blank">Live Demo</button>
