--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Library Management System In Java 📚</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/alsondab'" target="_blank">GitHub</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href-='https://github.com'" target="_blank">Live Demo</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/alsondab/Bibliot_G6.git'" target="_blank">GitHub</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/alsondab/Bibliot_G6.git'" target="_blank">Live Demo</button>
                     </div>
                 </div>
                 <div class="details-container color-container">
